app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@media only screen and (max-width: 768px) {
  html {
    --mdc-typography-headline1-font-size: 5rem;
  }
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: center;
  margin-left: auto;
  margin-right: auto;
  padding-left: 1rem;
  padding-right: 1rem;
  width: 30em;
}

@media only screen and (max-width: 768px) {
  body {
    width: 90%;
  }
}

table {
  width: 100%;
}

th>.mdc-button,
td>.mdc-button {
  padding: 0;
}

.board,
.games-list {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  align-content: center;
}

.board {
  width: 25rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

@media only screen and (max-width: 768px) {
  .board {
    width: 100%;
  }
}

.cell {
  flex: 1 0 30%;
  height: 7rem;
  margin: 5px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: lightgrey;
}

.symbol,
.button {
  line-height: 8rem;
  font-size: 8rem;
  font-family: fantasy;
  font-weight: bold;
}

.symbol.o-symbol {
  color: darkred;
}

.symbol.x-symbol {
  color: darkcyan;
}

.symbol.o-symbol.highlight,
.symbol.x-symbol.highlight {
  color: red;
}

.form {
  width: 100%;
  height: 100%;
}

.button {
  width: 100%;
  height: 100%;
  opacity: 0;
  appearance: none;
  -webkit-appearance: none;
  padding: 0;
}

@media (hover: hover) {
  .button:hover,
  .button:active {
    color: black;
    opacity: 1;
    border: 0;
  }
}

.button:disabled {
  display: none;
}

th,
td,
.mdc-data-table__cell {
  text-transform: capitalize;
}

